// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelationInput should render and match snapshot 1`] = `
.c6 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c3 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c5 {
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c2 > * + * {
  margin-top: 4px;
}

.c0 {
  position: relative;
}

.c0:before,
.c0:after {
  position: absolute;
  width: 100%;
  height: 4px;
  z-index: 1;
}

.c0:before {
  background: linear-gradient(rgba(33,33,52,0.1) 0%,rgba(0,0,0,0) 100%);
  top: 0;
}

.c0:after {
  background: linear-gradient(rgba(0,0,0,0) 0%,rgba(33,33,52,0.1) 100%);
  bottom: 0;
}

<div>
  <div
    class="c0"
  >
    <ol
      class="c1 c2"
      spacing="1"
    >
      <li
        class="c3 c4"
      >
        <div
          class="c5 c4"
          width="100%"
        >
          First relation
        </div>
      </li>
      <li
        class="c3 c4"
      >
        <div
          class="c5 c4"
          width="100%"
        >
          Second relation
        </div>
      </li>
      <li
        class="c3 c4"
      >
        <div
          class="c5 c4"
          width="100%"
        >
          Third relation
        </div>
      </li>
    </ol>
  </div>
  <div
    class="c6"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`RelationInput should render endAction and match snapshot 1`] = `
.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c6 {
  padding-left: 16px;
}

.c3 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c5 {
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c2 > * + * {
  margin-top: 4px;
}

.c0 {
  position: relative;
}

.c0:before,
.c0:after {
  position: absolute;
  width: 100%;
  height: 4px;
  z-index: 1;
}

.c0:before {
  background: linear-gradient(rgba(33,33,52,0.1) 0%,rgba(0,0,0,0) 100%);
  top: 0;
}

.c0:after {
  background: linear-gradient(rgba(0,0,0,0) 0%,rgba(33,33,52,0.1) 100%);
  bottom: 0;
}

<div>
  <div
    class="c0"
  >
    <ol
      class="c1 c2"
      spacing="1"
    >
      <li
        class="c3 c4"
      >
        <div
          class="c5 c4"
          width="100%"
        >
          First relation
        </div>
        <div
          class="c6"
        >
          <div>
            end action here
          </div>
        </div>
      </li>
      <li
        class="c3 c4"
      >
        <div
          class="c5 c4"
          width="100%"
        >
          Second relation
        </div>
      </li>
      <li
        class="c3 c4"
      >
        <div
          class="c5 c4"
          width="100%"
        >
          Third relation
        </div>
      </li>
    </ol>
  </div>
  <div
    class="c7"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
